--- a/app/src/main/res/layout/fragment_detail_etab.xml
+++ b/app/src/main/res/layout/fragment_detail_etab.xml
@@ -1,42 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="match_parent">
-
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <!-- Header: Day, Date -->
     <TextView
         android:id="@+id/detail_nom_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="nom établissement" />
+        android:text="nom établissement"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/detail_rne_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="rne établissement" />
+        android:text="rne établissement"
+        android:textSize="18sp" />
+
     <TextView
         android:id="@+id/detail_tel_textview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="wrap_content"
+        android:textSize="18sp" />
     <TextView
         android:id="@+id/detail_fax_textview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="18sp" />
     <TextView
         android:id="@+id/detail_email_textview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="18sp" />
     <TextView
         android:id="@+id/detail_adresse_textview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="16sp" />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/liste_personnel"
+        android:layout_marginTop="20dp"
+        android:paddingTop="30dp"
+        android:padding="20dp" />
 </LinearLayout>
-</ScrollView>
