--- a/app/src/main/res/menu/detailetab.xml
+++ b/app/src/main/res/menu/detailetab.xml
@@ -6,8 +6,7 @@
     <item android:id="@+id/action_share"
         android:title="@string/action_share"
         app:showAsAction="always"
-        android:icon="?attr/actionModeShareDrawable"
-        app:actionProviderClass="android.support.v7.widget.ShareActionProvider">
+        android:icon="?attr/actionModeShareDrawable">
     </item>
     <item android:id="@+id/action_call"
         android:title="@string/action_call"
