--- a/app/src/main/res/layout/fragment_detail_etab.xml
+++ b/app/src/main/res/layout/fragment_detail_etab.xml
@@ -38,6 +38,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp" />
+    <TextView
+        android:id="@+id/detail_animateur_textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp" />
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
