--- a/app/src/main/res/layout/activity_accueil.xml
+++ b/app/src/main/res/layout/activity_accueil.xml
@@ -16,11 +16,10 @@
         android:id="@+id/message_accueil"
         android:text="@string/message_accueil"
         android:foregroundGravity="center_vertical|center_horizontal"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:textAlignment="center"
         android:textStyle="normal|bold|italic"
-        tools:textSize="18sp" />
+        tools:textSize="18sp"
+        android:layout_alignParentTop="true" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -56,5 +55,13 @@
             android:layout_height="wrap_content"
             android:id="@+id/recherche_etablissement_par_animateur" />
     </LinearLayout>
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/message_version"
+        android:text="@string/message_version"
+        android:textAlignment="center"
+        android:textStyle="normal|bold|italic"
+        tools:textSize="8sp"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
