--- a/app/src/main/res/layout/fragment_etab.xml
+++ b/app/src/main/res/layout/fragment_etab.xml
@@ -11,6 +11,7 @@
         android:textAlignment="center"
         android:textColorLink="?attr/colorControlHighlight"
         android:textStyle="bold|italic"
+        android:layout_alignParentTop="true"
         android:textSize="18sp">
     </TextView>
 
