--- a/app/src/main/res/xml/syncadapter.xml
+++ b/app/src/main/res/xml/syncadapter.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sync-adapter xmlns:android="http://schemas.android.com/apk/res/android"
-    android:contentAuthority="@string/content_authority"
+    android:contentAuthority="com.creteil.com.danecreteil.app"
     android:accountType="@string/sync_account_type"
     android:userVisible="false"
     android:supportsUploading="false"
