--- a/app/src/main/res/layout/activity_etab.xml
+++ b/app/src/main/res/layout/activity_etab.xml
@@ -4,5 +4,5 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.creteil.com.danecreteil.app.EtablissementActivity"
-tools:ignore="MergeRootFrame" />
+    tools:context=".EtablissementActivity"
+    tools:ignore="MergeRootFrame" />
