--- a/app/src/main/res/layout/liste_anims_par_nom.xml
+++ b/app/src/main/res/layout/liste_anims_par_nom.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1.09"
-    tools:context="com.creteil.com.danecreteil.app.AnimateurParNomActivity">
+    tools:context=".AnimateurParNomActivity">
 
     <AutoCompleteTextView
         android:id="@+id/rechercher_anim_par_nom"
