--- a/app/src/main/res/layout/list_item_animateurs.xml
+++ b/app/src/main/res/layout/list_item_animateurs.xml
@@ -4,22 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     android:layout_weight="1.09"
-    tools:context=".AnimateursActivity">
+    tools:context=".AnimateursActivity"
+    android:layout_height="80dp">
 
     <ImageView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/photo"
-        android:layout_weight="1" />
+        android:layout_width="100dp" />
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_width="190dp"
+        android:layout_height="match_parent">
 
         <TextView
             android:text="nom"
@@ -38,5 +36,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/mail" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@android:drawable/stat_sys_vp_phone_call"
+            android:id="@+id/bouton_call" />
+
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@android:drawable/sym_action_email"
+            android:id="@+id/bouton_mail" />
     </LinearLayout>
 </LinearLayout>
