--- a/app/src/main/res/layout/fragment_animateurs.xml
+++ b/app/src/main/res/layout/fragment_animateurs.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+android:orientation="vertical"
+android:background="#f4f4f4" >
+
+<ExpandableListView
     android:id="@+id/liste_animateurs"
-    android:layout_marginTop="10dp" />
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"/>
+</LinearLayout>
