--- a/app/src/main/res/layout/list_item_departement.xml
+++ b/app/src/main/res/layout/list_item_departement.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:minHeight="?android:attr/listPreferredItemHeight"
-android:gravity="center_vertical"
-android:id="@+id/departement" />
 
-</RelativeLayout>
+    <ImageView
+        android:layout_height="match_parent"
+        app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
+        android:id="@+id/imagefleche"
+        android:layout_weight="1"
+        android:layout_width="20dp" />
+
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:minHeight="?android:attr/listPreferredItemHeight"
+    android:gravity="center_vertical"
+    android:id="@+id/departement"
+    android:textStyle="bold|italic"
+    android:textAlignment="center"
+    android:textSize="35sp"
+    android:fontFamily="cursive"/>
+
+</LinearLayout>
