--- a/app/src/main/res/menu/detailetab.xml
+++ b/app/src/main/res/menu/detailetab.xml
@@ -23,4 +23,9 @@
         app:showAsAction="always"
         android:icon="@android:drawable/sym_action_email">
     </item>
+    <item android:id="@+id/action_maj"
+        android:title="@string/action_maj"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_action_update">
+    </item>
 </menu>
