--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-path name="mes_images" path="Android/data/com.creteil.com.danecreteil/files/Pictures" />
+    <external-path name="mes_images" path="Android/data/com.creteil.com.danecreteil.app/files/Pictures" />
 </paths>
