--- a/app/src/main/res/layout/list_item_animateurs.xml
+++ b/app/src/main/res/layout/list_item_animateurs.xml
@@ -2,60 +2,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
+    android:layout_height="120dp"
     android:layout_weight="1.09"
-    tools:context=".AnimateursActivity"
-    android:layout_height="80dp">
+    android:orientation="horizontal"
+    tools:context=".AnimateursActivity">
 
     <ImageView
-        android:layout_height="match_parent"
-        app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/photo"
-        android:layout_width="100dp" />
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="190dp"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:textAlignment="gravity">
 
         <TextView
-            android:text="nom"
+            android:id="@+id/nom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/nom" />
+            android:text="nom" />
 
         <TextView
-            android:text="Tél"
+            android:id="@+id/tel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tel" />
+            android:text="Tél" />
 
         <TextView
-            android:text="Email"
+            android:id="@+id/mail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/mail" />
+            android:text="Email" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <ImageButton
+            android:id="@+id/bouton_call"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_phone"
-            android:id="@+id/bouton_call" />
+            app:srcCompat="@drawable/ic_phone" />
 
         <ImageButton
+            android:id="@+id/bouton_mail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_mail"
-            android:id="@+id/bouton_mail" />
+            app:srcCompat="@drawable/ic_mail" />
 
         <ImageButton
             android:id="@+id/bouton_update"
