--- a/app/src/main/res/layout/list_item_animateurs.xml
+++ b/app/src/main/res/layout/list_item_animateurs.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
-    android:layout_weight="1.09"
+    android:layout_height="140dp"
+    android:layout_weight="1.15"
     android:orientation="horizontal"
     tools:context=".AnimateursActivity">
 
@@ -18,24 +18,28 @@
         android:layout_width="190dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:textAlignment="gravity">
+        android:background="@drawable/shape"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/nom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:text="nom" />
 
         <TextView
             android:id="@+id/tel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textStyle="bold|italic"
             android:text="Tél" />
 
         <TextView
             android:id="@+id/mail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:text="Email" />
 
     </LinearLayout>
@@ -44,6 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:background="@drawable/shape"
         android:orientation="vertical">
 
         <ImageButton
